# wagtail_debug_gif_issue

./: Dockerfile  db.sqlite3  manage.py  pyproject.toml
debug_gif/: wsgi.py
debug_gif/settings/: base.py  dev.py
debug_gif/templates/: base.html
